--- a/mysite/templates/licence_time.html
+++ b/mysite/templates/licence_time.html
@@ -2,13 +2,12 @@
 <head><title>Keolis AB Stockholm, Sweden</title></head>
 <body>
 
-<!--<p>Driving Licence Number: {{ name }}	Time stamp: {{ actual_time }} </p> -->
-
 <ul>
-{%for getdata in getdata %}
-<li>Driving Licence Number: {{name}}		Time stamp: {{ actual_time }} </li>
-{%endfor%}
+{% for list in list %}
+    <li>Driving Licence Number: {{ list.number 	 }}	Time stamp: {{ list.timestamp }}</li>
+{% endfor %}
 </ul>
-<!--<p>Driving Licence Number: {{ getdata }}	Time stamp: {{ scan_time }} </p> -->
+
+
 </body>
 </html>
